openmetadata-docs/content/v1.4.x/connectors/ingestion/workflows/index.md
---
title: Ingestion Workflows
slug: /connectors/ingestion/workflows
---

# Ingestion Workflows

OpenMetadata uses workflows to ingest different kinds of metadata:

{%inlineCalloutContainer%}

{%inlineCallout
  icon="celebration"
  bold="Metadata Ingestion"
  href="/connectors/ingestion/workflows/metadata"%}
Ingest metadata from any of our connectors
{%/inlineCallout%}

{%inlineCallout
  icon="storage"
  bold="Usage Information"
  href="/connectors/ingestion/workflows/usage"%}
Find out how your users interact with your data.
{%/inlineCallout%}

{%inlineCallout
  icon="fit_screen"
  bold="Data Lineage"
  href="/connectors/ingestion/workflows/lineage"%}
Understand dependencies in your Data Platform.
{%/inlineCallout%}

{%inlineCallout
  icon="fit_screen"
  bold="dbt Ingestion"
  href="/connectors/ingestion/workflows/dbt"%}
Configure dbt metadata
{%/inlineCallout%}

{%inlineCallout
  icon="fit_screen"
  bold="Data Profiler"
  href="/how-to-guides/data-quality-observability/profiler/workflow"%}
Compute metrics and ingest sample data.
{%/inlineCallout%}

{%inlineCallout
  icon="fit_screen"
  bold="Data Quality"
  href="/how-to-guides/data-quality-observability/quality/configure"%}
Monitor your data and avoid surprises.
{%/inlineCallout%}

{%/inlineCalloutContainer%}
